# inception

./: README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-publish.yml
examples/: README.md  advanced_usage.py  basic_usage.py  cli_examples.sh  one_liners.py  quick_cli.md  quick_examples.py
inception/: main.py
inception_api/: __init__.py  client.py  main.py
tests/: conftest.py  test_cli.py  test_client.py
